# wolfson-bar

./: .envrc  .gitignore  Dockerfile  FUTURE-FEATURES.md  README.md  flake.nix  launch.sh  shell.nix
backend/: .gitignore  Cargo.toml  shell.nix  start.sh
backend/.cargo/: config.toml
backend/migrations/: 001_init.sql  002_events.sql  003_shifts.sql  004_calendar.sql  005_stock.sql  006_certificate_type.sql  007_admin_role.sql  008_email.sql  009_optional_passkey.sql  010_induction.sql
backend/src/: auth.rs  constants.rs  db.rs  email.rs  ical.rs  main.rs  models.rs  notifications.rs  test_util.rs
backend/src/routes/: admin.rs  auth.rs  calendar.rs  events.rs  induction.rs  local.rs  magic_link.rs  mod.rs  shifts.rs  stock.rs  term_weeks.rs  users.rs
demos/: integrated-events-and-rota.mov
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/assets/: code-of-conduct.md
frontend/src/components/: AboutPage.tsx  AdminLayout.tsx  CertificateModal.stories.tsx  CertificateModal.tsx  CodeOfConduct.tsx  CommitteeLayout.tsx  CommitteeNav.tsx  CommitteePage.tsx  CommitteeRoute.tsx  EventManagement.tsx  EventsCalendar.tsx  LoginButton.tsx  MagicLinkCallback.tsx  MenuPage.tsx  OnboardingPage.tsx  OnboardingStatusBar.tsx  PasskeyNudgeBanner.tsx  PrivacyPage.tsx  ProtectedRoute.tsx  QRScanner.tsx  ShiftDetailModal.stories.tsx  ShiftDetailModal.tsx  UserProfileLayout.tsx  UserProfileNav.tsx
frontend/src/hooks/: usePageTitle.ts
(+43 files in other folders)
